k8s/jenkins/manifest1/jenkins-05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pbs-ingress
spec:
  #Настраивает входной контроллер, отвечающий за управление этим объектом.
  ingressClassName: nginx
  rules:
    #Правила входящего трафика для HTTP-трафика
    - host: jenkins
      http:
        paths:
          #Правило по умолчанию для всех запросов
          - path: /
            pathType: Prefix
            backend:
              service:
                #Имя объекта Сервиса, куда следует перенаправлять трафик.
                name: jenkins-service
                port:
                  #Номер порта Сервиса, на который должен перенаправляться трафик.
                  number: 8080

#kubectl apply -f k8s/jenkins/manifest1/jenkins-05-ingress.yaml
